chandeliers-lus/tests/compile_fail/ui/tc/const/call.rs
//! Trying to use a function call in a `const` context.
//! Due to historical reasons this is a duplicate of `const/node`.
chandeliers_lus::decl! {
    const X : float = float(5);
}

fn main() {}
